force-app/main/default/objects/Retail_Order_Return_Product__c/Retail_Order_Return_Product__c.object-meta.xml
<CustomObject>
    <label>Retail Order Return Product</label>
    <nameField>
        <displayFormat>RORP-{0000}</displayFormat>
        <label>Retail Order Return Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Order Return Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>