force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Discounted_Kg_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Kg_Rate__c</fullName>
    <label>Discounted Kg Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>