force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Discounted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Unit_Price__c</fullName>
    <label>Discounted Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>