force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Hole_Type__c.field-meta.xml
<CustomField>
    <fullName>Hole_Type__c</fullName>
    <label>Hole Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>parallel</fullName>
            </value>
            <value>
                <fullName>Zigzag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>