force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount__c</fullName>
    <label>Product Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>