force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Order Return Products</relationshipLabel>
    <relationshipName>Retail_Order_Return_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>