force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Products</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Retail_Product__c.Retail_Product_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Order Return Products</relationshipLabel>
    <relationshipName>Retail_Order_Return_Products1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>