force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Retail_Order_Return_Form__c.field-meta.xml
<CustomField>
    <fullName>Retail_Order_Return_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Order Return Form</label>
    <referenceTo>Retail_Order_Return_Form__c</referenceTo>
    <relationshipLabel>Retail Order Return Products</relationshipLabel>
    <relationshipName>Retail_Order_Return_Products</relationshipName>
    <type>Lookup</type>
</CustomField>