force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Return_Net_Total_for_Product__c.field-meta.xml
<CustomField>
    <fullName>Return_Net_Total_for_Product__c</fullName>
    <label>Return Net Total for Product</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>