force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Return_Weight__c.field-meta.xml
<CustomField>
    <fullName>Return_Weight__c</fullName>
    <label>Return Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>