force-app/main/default/objects/Retail_Order_Return_Product__c/fields/Std_Pkg_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Std_Pkg_Sizes__c</fullName>
    <label>Std Pkg Sizes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>